--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "devDependencies": {
     "compass": "^0.1.1",
     "compass-mixins": "^0.12.10",
+    "node-sass": "*",
     "grunt": "^1.0.1",
     "grunt-cli": "^1.2.0",
     "grunt-contrib-clean": "^1.0.0",
@@ -11,7 +12,7 @@
     "grunt-contrib-uglify": "^2.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-remove": "^0.1.0",
-    "grunt-sass": "^3.1.0",
+    "grunt-sass": "2.1.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-w3c-html-validation": "^0.1.8"
   },
