--- a/shelter-in-plates/.gitignore
+++ b/shelter-in-plates/.gitignore
@@ -8,6 +8,8 @@ node_modules
 # local env files
 .env.local
 .env.*.local
+.env
+.env.*
 
 # Log files
 npm-debug.log*
@@ -22,3 +24,4 @@ yarn-error.log*
 *.njsproj
 *.sln
 *.sw?
+
