--- a/shelter-in-plates/package.json
+++ b/shelter-in-plates/package.json
@@ -18,6 +18,7 @@
     "vuex": "^3.1.2"
   },
   "devDependencies": {
+    "prerender-spa-plugin": "^3.4.0",
     "@vue/cli-plugin-babel": "^4.2.0",
     "@vue/cli-plugin-e2e-cypress": "^4.2.0",
     "@vue/cli-plugin-eslint": "^4.2.0",
